log
Mon, Apr 14, 2025 10:28:16 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Mon, Apr 14, 2025 10:31:54 AM: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
a4c77ae
Mon, Apr 14, 2025 10:32:26 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d05efa5
Mon, Apr 14, 2025 10:33:07 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
bc2f5b9
Mon, Apr 14, 2025 10:34:21 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     mapa->buckets = par ;
                   ^
cc1.exe: all warnings being treated as errors
80a3413
Mon, Apr 14, 2025 10:34:31 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
53ae5a0
Mon, Apr 14, 2025 10:35:21 AM: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
d645dc0
Mon, Apr 14, 2025 10:36:55 AM: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     mapa->buckets = par ;
                   ^
cc1.exe: all warnings being treated as errors
dbd0365
Mon, Apr 14, 2025 10:38:24 AM: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
01031a4
Mon, Apr 14, 2025 10:38:43 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e2bfafc
Mon, Apr 14, 2025 10:40:15 AM: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     mapa->buckets = pares ;
                   ^
cc1.exe: all warnings being treated as errors
e9ddf5e
Mon, Apr 14, 2025 10:41:19 AM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     mapa->buckets = (Pair*) calloc(capacity, sizeof(Pair)) ;
                   ^
cc1.exe: all warnings being treated as errors
996aa97
Mon, Apr 14, 2025 10:41:34 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     mapa->buckets = (Pair*) malloc(capacity * sizeof(Pair)) ;
                   ^
cc1.exe: all warnings being treated as errors
6fd30e4
Wed, Apr 16, 2025 11:06:32 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
57dd009
Wed, Apr 16, 2025 11:06:48 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
01b41bc
Wed, Apr 16, 2025 11:09:06 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4d87c50
Wed, Apr 16, 2025 11:13:24 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
275d328
Wed, Apr 16, 2025 11:14:29 AM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
5036e70
Wed, Apr 16, 2025 11:16:09 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
6c7ae5a
Wed, Apr 16, 2025 11:16:24 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
887bc72
Wed, Apr 16, 2025 11:16:37 AM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
84ad131
Wed, Apr 16, 2025 11:24:21 AM: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|6
total_score: 0/70
d4a4122
Wed, Apr 16, 2025 11:25:28 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e1e678b
Wed, Apr 16, 2025 11:29:28 AM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:48:87: error: comparison between pointer and integer [-Werror]
         } while (map->buckets[posicion]->key == NULL || map->buckets[posicion]->value == -1) ;
                                                                                       ^~
cc1.exe: all warnings being treated as errors
cac2863
Wed, Apr 16, 2025 11:30:20 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:48:87: error: comparison between pointer and integer [-Werror]
         } while (map->buckets[posicion]->key != NULL || map->buckets[posicion]->value != -1) ;
                                                                                       ^~
cc1.exe: all warnings being treated as errors
3a8fdeb
Wed, Apr 16, 2025 11:30:42 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
50d7216
Wed, Apr 16, 2025 11:31:07 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eca3140
Wed, Apr 16, 2025 11:31:24 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
1ddbef3
Wed, Apr 16, 2025 11:31:41 AM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
eda197c
Wed, Apr 16, 2025 11:32:22 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0d3bf27
Wed, Apr 16, 2025 11:33:05 AM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
7918f8b
Wed, Apr 16, 2025 11:34:11 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
32121d6
Wed, Apr 16, 2025 11:35:15 AM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
32f2e22
Wed, Apr 16, 2025 11:35:28 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b0afb46
Wed, Apr 16, 2025 11:37:13 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
d1da121
Wed, Apr 16, 2025 11:39:11 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
3cc24f0
Wed, Apr 16, 2025 11:39:42 AM: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
484cbc5
Wed, Apr 16, 2025 11:42:05 AM: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
e829fc3
Wed, Apr 16, 2025 11:42:54 AM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
486d172
Wed, Apr 16, 2025 11:43:21 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e4038cc
